sumo/tests/duarouter/flows/errors/vehicle_empty_departlane/errors.duarouter
Error: Attribute 'departLane' in definition of a flow is empty.
Error: The loader for flow-files from file 'input_flows.flows.xml' could not be initialised;
 Reason: Invalid departLane definition for vehicle 0;
 must be one of ("random", "free", "allowed", "best", or an int>0).
Quitting (on error).
